--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -10,6 +10,35 @@ html, body{
     background-color: #f1f1f1;
 }
 
+
+.items{
+    margin: 10px;
+    display: flex;
+}
+.card{
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid black;
+    height: 150px;
+    width: 200px;
+    background-image: url(); /* this is image link */
+    /* adding new feature */
+    display: grid;
+    place-items: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 header{
     padding: 5px;
     display: flex;
