--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -6,53 +6,50 @@
 html, body{
     width: 100%;
     height: 100%;
-    background-attachment: fixed;
     background-color: #f1f1f1;
+    background-attachment: fixed;
+    scroll-behavior: smooth;
 }
-
-
-.items{
-    margin: 10px;
-    display: flex;
-}
-.card{
-    padding: 5px;
-    margin: 5px;
-    border: 1px solid black;
-    height: 150px;
-    width: 200px;
-    background-image: url(); /* this is image link */
-    /* adding new feature */
-    display: grid;
-    place-items: center;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
 header{
-    padding: 5px;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
-    height: 70px;
-    box-shadow: 1px 2px 10px black;
+    width: 100%;
+    height: 50px;
+    background-color: #c9c7c7;
 }
 
-header > nav > ul > li {
+header nav li{
     display: inline;
     list-style: none;
-    font-size: large;
-    margin-right: 10px;
+    margin: 0 10px;
+
+}
+header a{
+    text-decoration: none;
+    color: #000;
+    font-size: 20px;
+    font-weight: 500;
+}
+header a:hover{
+    text-decoration: underline;
+}
+.logo{
+    font-size: 30px;
+    font-weight: 700;
+}
+.home{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 10px;
+}
+.home img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    padding: 10px;
 }
